<resources>
    <string name="app_name">Moka POS demo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="library">Library</string>
    <string name="all_items">All Items</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="all_discounts">All Discounts</string>
    <string name="string_1">1</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="discount">Discount</string>
    <string name="clear_sale">Clear sale</string>
    <string name="charge_0">Charge $ 0</string>
    <string name="loading_shopping_items">Loading shopping items…</string>
    <string name="sub_total">Sub total</string>
    <string name="charge">Charge $</string>
</resources>
