<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_height="400dp"
    tools:layout_width="500dp">

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:text="@string/save" />

    <View
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/cancel"
        android:layout_marginBottom="10dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/divider_1"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/cancel"
        android:layout_toLeftOf="@id/save"
        android:layout_toRightOf="@+id/cancel"
        android:layout_toStartOf="@id/save"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="Name - $100" />

    <TextView
        android:id="@+id/quantity_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_1"
        android:layout_margin="5dp"
        android:text="@string/quantity"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/quantity_view"
        android:layout_alignStart="@id/quantity_view"
        android:layout_below="@id/quantity_view"
        android:layout_marginBottom="20dp"
        android:background="@drawable/grey_rounded_corner"
        android:gravity="center"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:text="@string/string_1"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/plus_quan"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/quantity_view"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/grey_rounded_corner"
        android:gravity="center"
        android:text="@string/plus"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/minus_quan"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/quantity"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/plus_quan"
        android:layout_toStartOf="@+id/plus_quan"
        android:background="@drawable/grey_rounded_corner"
        android:gravity="center"
        android:text="@string/minus"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/discount_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantity"
        android:layout_margin="5dp"
        android:text="@string/discount"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.example.mokaposdemo.utils.ToggleButtonGroupTableLayout
        android:id="@+id/discount_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/discount_view"
        android:layout_margin="5dp" />


</RelativeLayout>